--- a/Final/aboutLogged.html
+++ b/Final/aboutLogged.html
@@ -54,8 +54,8 @@
               <i class="fas fa-bell fa-fw"></i> Notifications </a>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#addFriend">Mariana wants to be your friend</a>
-              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#joinEvent">Quaresma invited you to an event</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#addFriend">Quaresma1997 wants to be your friend</a>
+              <a class="dropdown-item" href="#" data-toggle="modal" data-target="#joinEvent">Quaresma1997 invited you to an event</a>
             </div>
           </div>
         </li>
@@ -79,12 +79,15 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-          <img src="./imgs/profile.jpg" class="img-fluid rounded mx-auto d-block">
+          <a href="./quaresma.html" class="text-white">
+            <img src="./imgs/profile.jpg" class="img-fluid rounded mx-auto d-block">
+          </a>
           <br>
           <br>
-          <h3 class="text-center">Mariana wants to be your friend.</h3>
+          <h3 class="text-center">
+            <a href="./quaresma.html" class="text-white">Quaresma1997</a> wants to be your friend.</h3>
           <br>
-          <button type="button" class="btn btn-success btn-lg btn-block">
+          <button type="button" class="btn btn-success btn-lg btn-block" onclick="window.location.href='./quaresma.html'">
             <i class="fas fa-check fa-fw"></i> Accept </button>
           <button type="button" class="btn btn-outline-danger btn-lg btn-block" data-dismiss="modal">
             <i class="fas fa-times fa-fw"></i> Decline </button>
@@ -101,16 +104,16 @@
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-          <a href="./event.html" class="text-white">
+          <a href="./eventMemb.html" class="text-white">
             <img src="./imgs/hp2.jpg" class="img-fluid rounded mx-auto d-block">
           </a>
           <br>
           <br>
           <h3 class="text-center">
-            <a href="./quaresma.html" class="text-white">Quaresma</a> invited you to
-            <a href="./event.html" class="text-white">Mini Teste PPIN</a>.</h3>
+            <a href="./quaresma.html" class="text-white">Quaresma1997</a> invited you to
+            <a href="./eventMemb.html" class="text-white">Mini Teste PPIN</a>.</h3>
           <br>
-          <button type="button" class="btn btn-success btn-lg btn-block" onclick="window.location.href='./event.html'">
+          <button type="button" class="btn btn-success btn-lg btn-block" onclick="window.location.href='./eventPart.html'">
             <i class="fas fa-check fa-fw"></i> Accept </button>
           <button type="button" class="btn btn-outline-danger btn-lg btn-block" data-dismiss="modal">
             <i class="fas fa-times fa-fw"></i> Decline </button>
@@ -118,6 +121,7 @@
       </div>
     </div>
   </div>
+
   <div class="modal fade" id="add_event">
     <div class="modal-dialog modal-dialog-centered modal-md">
   
