--- a/Final/eventMemb.html
+++ b/Final/eventMemb.html
@@ -96,7 +96,7 @@
       </div>
     </div>
   </div>
-
+  
   <div class="modal fade" id="joinEvent">
     <div class="modal-dialog modal-md">
       <div class="modal-content">
@@ -257,40 +257,6 @@
     </div>
   </div>
 
-  <div class="modal fade" id="invite">
-    <div class="modal-dialog modal-dialog-centered modal-md">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="inviteModal">Invite Users</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div class="jumbotron p-1 mb-1 mt-1">
-            <div class="row">
-              <div class="col-md-3  col-3">
-                <a href="./quaresma.html" class="text-white">
-                  <img src="./imgs/profile.jpg" class="img-fluid mx-auto rounded">
-                </a>
-              </div>
-              <div class="col-md-7 col-7">
-                <h3>
-                  <a href="./quaresma.html" class="text-white">Quaresma1997</a>
-                </h3>
-              </div>
-              <div class="col-md-2 col-2 d-flex align-items-center">
-                <button type="button" class="btn btn-success btn-sm" data-toggle="tooltip" data-placement="left" title="Invite">
-                  <i class="fas fa-plus"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <div class="container" style="margin-top:10em">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
@@ -320,14 +286,10 @@
     </div>
 
     <div class="jumbotron">
-      <button type="button" class="btn btn-outline-danger mx-1 float-right" onclick="window.location.href='./homepage.html'">
-        <i class="fas fa-trash-alt fa-fw"></i> Delete </button>
-      <button type="button" class="btn btn-primary mx-1 float-right">
-        <i class="far fa-edit fa-fw"></i> Edit </button>
+      <button type="button" class="btn btn-success mx-1 float-right" onclick="window.location.href='./eventPart.html'">
+        <i class="fas fa-check fa-fw"></i> Join Event </button>
       <button type="button" class="btn btn-secondary mx-1 float-right" data-toggle="modal" data-target="#participants">
         <i class="fas fa-clipboard-list fa-fw"></i> Participants </button>
-      <button type="button" class="btn btn-secondary mx-1 float-right" data-toggle="modal" data-target="#invite">
-        <i class="fas fa-plus fa-fw"></i> Invite Users </button>
       <br>
       <br>
       <hr>
