fiquem felizes por fazer o botãozinho de past events x)

--- a/Motivação/homepage.html
+++ b/Motivação/homepage.html
@@ -205,6 +205,10 @@
               <input type="radio" id="recom" name="customRadio" class="custom-control-input">
               <label class="custom-control-label" for="recom">Recommendations</label>
             </div>
+			<div class="custom-control custom-radio mb-1">
+              <input type="radio" id="pastevent" name="customRadio" class="custom-control-input">
+              <label class="custom-control-label" for="pastevent">Past Events</label>
+            </div>
           </div>
           <hr>
           <div>
