--- a/Final/event.html
+++ b/Final/event.html
@@ -76,7 +76,7 @@
                 <i class="fas fa-user fa-fw"></i>
               </span>
             </div>
-            <input type="text" class="form-control" placeholder="Enter Username">
+            <input type="text" class="form-control" placeholder="Enter Username" id="username">
           </div>
   
           <label for="email">Email</label>
